fix faq width on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,13 @@
   text-align: center;
   margin-top: 100px;
 }
+
+@media screen and (max-width: 767px) {
+  .suceess {
+    width: 300px;
+  }
+
+  .faqs {
+    width: 300px;
+  }
+}
